loadtesting and readme

--- a/deploy/.env.dev
+++ b/deploy/.env.dev
@@ -6,9 +6,9 @@ DB_CONTAINER_NAME=db_$APP_CONTAINER_NAME
 DB_CONTAINER_HOST=db
 DB_HOST=localhost
 DB_PORT=5432
-DB_NAME=mydb
-DB_USER=postgres
-DB_PASSWORD=postgres
+POSTGRES_DB=db_avito_shop
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=postgres
 DB_DRIVER=postgresql
 DB_SSL=disable
 
