--- a/test_config.yaml
+++ b/test_config.yaml
@@ -5,9 +5,9 @@ db_config:
   db_driver: postgresql
   db_user: postgres
   db_password: postgres
-  db_host: localhost
+  db_host: db_avito_shop
   db_port: "5432"
-  db_name: mydb
+  db_name: db_avito_shop
   db_ssl: disable
   default_coins: 1000
 
